# md-editor

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  ORIGINAL_REQUEST.md  PLAN-NOTES.md  PROJECT.md  README.md  TECHNICAL_DOCS.md  USER_GUIDE.md  budgets.toml  diff.json  features.md  index.html  justfile  md-editor.desktop  my_diff.patch  overview.md  package-lock.json  package.json  tailwind.config.js  test-fence.js  todo.md  update.patch  vite.config.js  wysiwyg-editor-instructions.md
core/: Cargo.toml  build.rs  build_pdfium.rs  pdfium_build_paths.rs
core/examples/: bench_refs.rs  dump_refs.rs
core/src/: config.rs  file_index.rs  lib.rs  massive_tests.rs  pdf.rs  references.rs  state.rs  tracker.rs  types.rs  vault.rs
core/src/application/: mod.rs  pdf_service.rs  search_service.rs  tracker_service.rs  vault_service.rs
core/src/database/: mod.rs  pdf_repository.rs  search_repository.rs  settings_repository.rs  tracker_repository.rs
core/src/domain/: id.rs  links.rs  mod.rs  note.rs  path.rs  pdf_page.rs  search.rs  session.rs
core/src/domain/pdf/: annotation.rs  geometry.rs  link.rs  mod.rs  text.rs
core/src/infrastructure/: config_store.rs  indexer.rs  mod.rs
core/src/infrastructure/pdfium/: binding.rs  document.rs  mod.rs  render.rs  text.rs  worker.rs
core/src/vault/: fs.rs  paths.rs  reference_repair.rs  search.rs
core/tests/: smoke.rs
native/: Cargo.toml  HANDOFF.md
native/src/: app.rs  app_shell.rs  command_registry.rs  dummy.rs  dummy_test.rs  editor_state.rs  integrity.rs  main.rs  messages.rs  pdf_layout.rs  pdf_links.rs  pdf_navigation.rs  pdf_notes.rs  pdf_page_cache.rs  pdf_pane.rs  search.rs  search_state.rs  test_scroll.rs  theme.rs  tracker_state.rs  ui_state.rs  vault_state.rs
native/src/app/: characterization_tests.rs  effects.rs  mod.rs  model.rs  model_tests.rs  startup.rs  subscription.rs  update.rs  view.rs
native/src/design/: mod.rs  motion.rs  palette.rs  tokens.rs
native/src/editor/: buffer.rs  geometry.rs  highlight.rs  layout_cache.rs  layout_tree.rs  mod.rs  renderer.rs  tests_tmp.rs
native/src/editor/buffer/: command.rs  document.rs  formatting.rs  mod.rs  movement.rs  table.rs  transaction.rs
native/src/editor/parser/: block.rs  inline.rs  metadata.rs  mod.rs  model.rs  reference.rs  syntax.rs
native/src/editor/renderer/: draw.rs  geometry.rs  hit_test.rs  measure.rs  mod.rs  movement.rs  scrollbar.rs  state.rs  widget.rs
native/src/features/: citations.rs  editor.rs  mod.rs  overlays.rs  search.rs  shell.rs  system.rs  tracker.rs  workspace.rs
native/src/features/pdf/: annotations.rs  message.rs  mod.rs  navigation.rs  search.rs  state.rs  update.rs  view_model.rs
native/src/platform/: desktop_integration.rs  mod.rs
native/src/views/: backlinks.rs  citation_palette.rs  command_palette.rs  diagnostics.rs  focus_button.rs  icons.rs  interactive_pdf.rs  link_note_picker.rs  mod.rs  modals.rs  pdf_annotations.rs  pdf_viewer.rs  search.rs  sidebar.rs  status_bar.rs  toast.rs  toc.rs  toolbar.rs  tracker.rs  welcome.rs
native/tests/: smoke.rs
pdf/: Cargo.toml  build.rs
pdf/src/: lib.rs  render.rs  scroll.rs  tile.rs
pdf/tests/: fts_bridge.rs  selection_real_glyphs.rs
shell/: Cargo.toml
shell/src/: desktop.rs  headless.rs  lib.rs  main.rs  paths.rs  settings.rs
shell/src/gui/: chrome.rs  chrome_panels.rs  command_spine.rs  commands_file.rs  commands_md.rs  commands_pdf_annotations.rs  commands_pdf_nav.rs  commands_settings.rs  drag.rs  editor_canvas.rs  file_tree.rs  fonts.rs  icons.rs  input.rs  keys.rs  markdown_assets.rs  menu.rs  mod.rs  motion.rs  overlay.rs  paint.rs  pdf_input.rs  pdf_view.rs  session.rs  session_persist.rs  shaped_measurer.rs  stores.rs  toast.rs  tokens.rs  tracker_view.rs  tracker_widgets.rs  welcome.rs  worker.rs
shell/tests/: annotation_niceties.rs  annotations_wiring.rs  backlinks.rs  checkbox_layout.rs  chrome.rs  discoverability.rs  editor_draw_plan.rs  editor_hit_testing.rs  editor_selection.rs  file_tree.rs  keypress_bench.rs  markdown_find_replace.rs  markdown_interactions.rs  markdown_outline.rs  mouse_coverage.rs  overlay_list.rs  pdf_find.rs  pdf_links.rs  pdf_paint_plan.rs  pdf_reading.rs  pdf_toc.rs  pdf_worker.rs  session_restore.rs  shell_key_routing.rs  spike_text_shaping.rs  tracker_wiring.rs
shell/tests/fixtures/: golden.plan.txt
src-tauri/: Cargo.toml  build.rs  build_pdfium.rs  md_editor_settings.sqlite  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ast_diff.rs  commands.rs  file_index.rs  fs_commands.rs  ipc_types.rs  lib.rs  main.rs  parser.rs  pdf_commands.rs  piece_table.rs  test_pdfium_sync.rs  tracker_commands.rs  undo.rs
v3/: Cargo.toml  budgets.toml
v3/.cargo/: config.toml
v3/editor/: Cargo.toml
v3/editor/src/: buffer.rs  document.rs  layout.rs  lib.rs  parse.rs  style.rs  syntax.rs
v3/editor/src/buffer/: typing.rs
v3/editor/tests/: buffer_properties.rs  buffer_undo_invariants.rs  bug_b_layout_reflow.rs  formatting.rs
v3/kernel/: Cargo.toml
v3/kernel/src/: command.rs  defaults.rs  focus.rs  input.rs  lib.rs  pane.rs
v3/kernel/tests/: bug_a_keymap_scoping.rs  bug_c_documents_are_peers.rs
v3/notes/: welcome.md
v3/packaging/macos/: Info.plist
v3/pdf/: Cargo.toml
v3/pdf/src/: lib.rs  outline.rs  render.rs  scroll.rs  select.rs  tile.rs
v3/pdf/tests/: selection_real_glyphs.rs
v3/shell/: Cargo.toml
v3/shell/src/: app.rs  desktop.rs  headless.rs  keys.rs  lib.rs  main.rs  settings.rs  vault_picker.rs
v3/shell/tests/: annotation_niceties.rs  chrome.rs  editor_draw_plan.rs  editor_hit_testing.rs  editor_selection.rs  file_tree.rs  keypress_bench.rs  markdown_find_replace.rs  markdown_outline.rs  mouse_coverage.rs  overlay_list.rs  pdf_find.rs  pdf_links.rs  pdf_paint_plan.rs  pdf_reading.rs  pdf_toc.rs  pdf_worker.rs  session_restore.rs  shell_key_routing.rs  tracker_wiring.rs
v3/vault/: Cargo.toml
v3/vault/src/: annotations.rs  asset_sizes.rs  error.rs  index.rs  lib.rs  tracker.rs
v3/xtask/: Cargo.toml
v3/xtask/src/: main.rs
(+228 files in other folders)
