# MD Editor — a local-first Markdown + PDF workspace.
# Architecture and contributor docs live in docs/ (see docs/ARCHITECTURE.md).
[workspace]
members = ["kernel", "editor", "vault", "pdf", "shell", "xtask"]
# Exclude only the `xtask` packaging tool from the default set, so a bare
# `cargo run` resolves to the single remaining binary (`md-editor`) while
# `cargo build`/`cargo test` still cover every real crate.
default-members = ["kernel", "editor", "vault", "pdf", "shell"]
resolver = "2"

[workspace.package]
version = "3.0.0-dev"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
