[package]
name = "md-editor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
pdfium-render = { version = "0.9.1", features = ["thread_safe", "image_latest"] }
image = "0.25"
base64 = "0.22"
lru = "0.18.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
ureq = { version = "3.3.0", default-features = true }
flate2 = "1"
tar = "0.4"
