[package]
name = "md-editor-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "md-editor"
path = "src/main.rs"

[dependencies]
md-editor-core = { path = "../core" }
iced = { version = "0.14", features = ["canvas", "image", "advanced", "tokio"] }
rfd = "0.15"
arboard = "3"
ropey = "1.6"
pulldown-cmark = "0.12"
image = "0.25"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
ratex-render = { version = "0.1.7", features = ["embed-fonts"] }
ratex-lexer = "0.1.7"
ratex-parser = "0.1.7"
ratex-layout = "0.1.7"
ratex-font-loader = { version = "0.1.7", features = ["embed-fonts"] }
ratex-katex-fonts = "0.1.7"
ratex-types = "0.1.7"
resvg = "0.47.0"
tiny-skia = "0.12.0"
usvg = "0.47.0"

[dev-dependencies]
tempfile = "3.8"
