[package]
name = "md-editor-native"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "md-editor"
path = "src/main.rs"

[dependencies]
md-editor-core = { path = "../core" }
iced = { version = "0.14", features = ["canvas", "image", "advanced", "tokio"] }
rfd = "0.17.2"
ropey = "1.6"
image = "0.25"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
syntect = "5"
regex = "1"
ratex-render = { version = "0.1.7", features = ["embed-fonts"] }
ratex-parser = "0.1.7"
ratex-layout = "0.1.7"
ratex-types = "0.1.7"
