[package]
name = "md-editor-native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native desktop markdown editor with vault search, PDF support, and study tracking."

[[bin]]
name = "md-editor"
path = "src/main.rs"

[dependencies]
md-editor-core = { path = "../core" }
iced = { version = "0.14", features = ["canvas", "image", "advanced", "tokio"] }
rfd = "0.17.2"
ropey = "1.6"
image = "0.25"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
syntect = "5"
regex = "1"
ratex-render = { version = "0.1.7", features = ["embed-fonts"] }
ratex-parser = "0.1.7"
ratex-layout = "0.1.7"
ratex-types = "0.1.7"
uuid = { version = "1", features = ["v4"] }
