[package]
name = "md-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PDF engine: tile keys, byte-budget LRU cache, cancellable render queue; pdfium wiring behind the `pdfium` feature"

[lints]
workspace = true

[features]
# pdfium wiring is opt-in so the pure tile logic builds/tests on machines
# without libpdfium; CI runs the pure suite always, this feature when present.
pdfium = ["dep:pdfium-render"]

[dependencies]
pdfium-render = { version = "0.9.1", features = ["thread_safe"], optional = true }
thiserror = "2"

[dev-dependencies]
# Integration test for the PDF-text → FTS bridge (vault's TextExtractor
# seam). Dev-only: production composition happens in the shell, never
# engine-to-engine.
md-vault = { path = "../vault" }
tempfile = "3"

[build-dependencies]
flate2 = "1"
sha2 = "0.10"
tar = "0.4"
ureq = "2.12"
