[package]
name = "md3-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shell binary: wires kernel + engines; generates keymap/palette from the command registry"

[lints]
workspace = true

[features]
# Real PDF page rendering in the GUI. Off by default for the same reason as
# md3-pdf's `pdfium` feature: machines without libpdfium must build green.
pdfium = ["md3-pdf/pdfium"]

[dependencies]
md3-kernel = { path = "../kernel" }
md3-editor = { path = "../editor" }
md3-vault = { path = "../vault" }
md3-pdf = { path = "../pdf" }
iced = { version = "0.14", features = ["canvas", "image", "advanced", "tokio"] }
# Session snapshots + keymap-override files: the shell owns all file-format
# parsing (kernel and engines stay serde-free by decision).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
thiserror = "2"
directories = "5"
chrono = "0.4"
rfd = "0.17.2"
tokio = { version = "1", features = ["time"] }
open = "5"
ratex-render = { version = "0.1.7", features = ["embed-fonts"] }
ratex-parser = "0.1.7"
ratex-layout = "0.1.7"
ratex-types = "0.1.7"
cosmic-text = "0.15.0"
unicode-segmentation = "1.12"

[dev-dependencies]
# Routing tests drive the real update loop over a throwaway vault directory.
tempfile = "3"
