[package]
name = "md-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
