[package]
name = "md-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
pdfium-render = { version = "0.9.1", features = ["thread_safe", "image_latest"] }
image = "0.25"
base64 = "0.22"
lru = "0.18.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = { version = "3.3.0", default-features = true }
flate2 = "1"
tar = "0.4"

[lib]
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
