[package]
name = "md3-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vault core: typed errors, atomic saves (watcher/index land later)"

[lints]
workspace = true

[dependencies]
notify = "8"
rusqlite = { version = "0.39", features = ["bundled"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
